add: photo xlarge line 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -204,6 +204,7 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name=IconSettingXLargeLine />
                             <IconWrapper component="Icon" name=IconSupportXLargeLine />
                             <IconWrapper component="Icon" name=IconBookmarkXLargeFill />
+                            <IconWrapper component="Icon" name=IconPhotoXLargeLine />
                         </div>
                     </div>
                     <!--2x-large-->
