feat: 아이콘 피그마 순서대로 정렬

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -68,22 +68,39 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Small</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name="IconCheckSmallLine" />
-                            <IconWrapper component="Icon" name="IconPlusSmallLine" color="black" />
-                            <IconWrapper component="Icon" name="IconArrowSmallLine" />
+                            <IconWrapper component="Icon" name="IconProfileSmallLine"/>
+                            <IconWrapper component="Icon" name="IconProfileSmallFill"/>
+                            <IconWrapper component="Icon" name="IconArrowSmallLine"/>
+                            <IconWrapper component="Icon" name="IconTextArrowSmallLine"/>
+                            <IconWrapper component="Icon" name="IconPlusSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCloseSmallLine"/>
+                            <IconWrapper component="Icon" name="IconSearchSmallLine"/>
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconCheckSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCheckRoundSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCheckRoundSmallFill"/>
+                            <IconWrapper component="Icon" name="IconQuestionMarkSmallLine"/>
+                            <IconWrapper component="Icon" name="IconQuestionMarkSmallFill"/>
+                            <IconWrapper component="Icon" name="IconExclamationSmallLine"/>
+                            <IconWrapper component="Icon" name="IconExclamationSmallFill"/>
+                            <IconWrapper component="Icon" name="IconSettingSmallFill"/>
+                        </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                            <IconWrapper component="Icon" name="IconMegaphoneSmallLine"/>
+                            <IconWrapper component="Icon" name="IconStarSmallLine"/>
+                            <IconWrapper component="Icon" name="IconStarSmallFill"/>
+                            <IconWrapper component="Icon" name="IconFileSmallLine"/>
+                            <IconWrapper component="Icon" name="IconLinkSmallLine"/>
+                            <IconWrapper component="Icon" name="IconLikeSmallLine"/>
+                            <IconWrapper component="Icon" name="IconLikeSmallFill"/>
+                        </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                            <!-- 제외 -->
                             <IconWrapper component="Icon" name="IconThreeDotSmallFill" />
                             <IconWrapper component="Icon" name="IconTextArrowSmallFill" />
                             <IconWrapper component="Icon" name="IconOfficialSmallFill" />
-                            <IconWrapper component="Icon" name="IconExclamationSmallFill" />
-                            <IconWrapper component="Icon" name="IconProfileSmallFill" />
                             <IconWrapper component="Icon" name="IconCheckSmallFill" />
-                            <IconWrapper component="Icon" name="IconCloseSmallLine" />
-                            <IconWrapper component="Icon" name="IconSettingSmallFill" />
-                            <IconWrapper component="Icon" name="IconQuestionMarkSmallFill" />
-                            <IconWrapper component="Icon" name="IconFileSmallLine" />
-                            <IconWrapper component="Icon" name="IconStarSmallFill" color="gray400" />
-                            <IconWrapper component="Icon" name="IconMegaphoneSmallLine" />
-                            <IconWrapper component="Icon" name="IconLinkSmallLine" />
                         </div>
                     </div>
                     <!--medium-->
