--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -72,8 +72,8 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconProfileSmallFill"/>
                             <IconWrapper component="Icon" name="IconArrowSmallLine"/>
                             <IconWrapper component="Icon" name="IconTextArrowSmallLine"/>
-                            <IconWrapper component="Icon" name="IconPlusSmallLine"/>
                             <IconWrapper component="Icon" name="IconCloseSmallLine"/>
+                            <IconWrapper component="Icon" name="IconPlusSmallLine"/>
                             <IconWrapper component="Icon" name="IconSearchSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
@@ -107,55 +107,66 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Medium</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name=IconCheckMediumFill />
-                            <IconWrapper component="Icon" name=IconLikeMediumLine />
-                            <IconWrapper component="Icon" name=IconLikeMediumFill />
-                            <IconWrapper component="Icon" name=IconCommentMediumLine />
-                            <IconWrapper component="Icon" name=IconCheckMediumLine />
-                            <IconWrapper component="Icon" name=IconPlusMediumLine color="black" />
-                            <IconWrapper component="Icon" name=IconArrowMediumLine />
-                            <IconWrapper component="Icon" name=IconTextArrowMediumLine />
-                            <IconWrapper component="Icon" name=IconFileMediumLineLight />
-                            <IconWrapper component="Icon" name=IconTrashMediumLineLight />
-                            <IconWrapper component="Icon" name=IconDownloadMediumLineLight />
-                            <IconWrapper component="Icon" name=IconThreeDotMediumFill />
-                            <IconWrapper component="Icon" name=IconHourglassMediumLine />
-                            <IconWrapper component="Icon" name=IconCloseMediumFill />
-                            <IconWrapper component="Icon" name=IconInfoMediumFill />
-                            <IconWrapper component="Icon" name=IconInfoMediumLine />
-                            <IconWrapper component="Icon" name=IconExclamationMediumLine />
-                            <IconWrapper component="Icon" name=IconQuestionMarkMediumLine />
-                            <IconWrapper component="Icon" name=IconCloseMediumLine />
-                            <IconWrapper component="Icon" name=IconCheckRoundMediumLine />
-                            <IconWrapper component="Icon" name=IconFilterMediumLine />
-                            <IconWrapper component="Icon" name=IconLocationMediumFill />
-                            <IconWrapper component="Icon" name=IconMentoringMediumLine />
-                            <IconWrapper component="Icon" name=IconResumeMediumLine />
-                            <IconWrapper component="Icon" name=IconJobWikiMediumLine />
-                            <IconWrapper component="Icon" name=IconAnalyticsMediumLine />
-                            <IconWrapper component="Icon" name=IconInterviewMediumLine />
-                            <IconWrapper component="Icon" name=IconEssayMediumLine />
-                            <IconWrapper component="Icon" name=IconVodMediumLine />
-                            <IconWrapper component="Icon" name=IconEduMediumLine />
-                            <IconWrapper component="Icon" name=IconCouponMediumLine />
-                            <IconWrapper component="Icon" name=IconQuestionMediumLine />
-                            <IconWrapper component="Icon" name=IconRevertMediumLine />
-                            <IconWrapper component="Icon" name=IconDownloadMediumLine />
-                            <IconWrapper component="Icon" name=IconExportMediumLine />
-                            <IconWrapper component="Icon" name=IconClockMediumFill />
-                            <IconWrapper component="Icon" name=IconClockMediumLine />
-                            <IconWrapper component="Icon" name=IconSupportMediumLine />
-                            <IconWrapper component="Icon" name=IconStarMediumFill color="gray400" />
-                            <IconWrapper component="Icon" name=IconMegaphoneMediumLine />
-                            <IconWrapper component="Icon" name=IconMinusMediumLine />
-                            <IconWrapper component="Icon" name=IconDiscountMediumLine />
-                            <IconWrapper component="Icon" name="IconLinkMediumLine" />
-                            <IconWrapper component="Icon" name="IconBrowseMediumLine" />
-                            <IconWrapper component="Icon" name="IconVideoMediumFill" />
-                            <IconWrapper component="Icon" name="IconPriceMediumLine" />
-                            <IconWrapper component="Icon" name="IconProfileMediumLine" />
-                            <IconWrapper component="Icon" name="IconBookmarkMediumFill" />
+                            <IconWrapper component="Icon" name="IconInterviewMediumLine" />
+                            <IconWrapper component="Icon" name="IconCommentMediumLine" />
+                            <IconWrapper component="Icon" name="IconArrowMediumLine" />
+                            <IconWrapper component="Icon" name="IconTextArrowMediumLine" />
+                            <IconWrapper component="Icon" name="IconRevertMediumLine" />
+                            <IconWrapper component="Icon" name="IconPlusMediumLine" />
+                            <IconWrapper component="Icon" name="IconMinusMediumLine" />
+                            <IconWrapper component="Icon" name="IconCloseMediumLine" />
+                            <IconWrapper component="Icon" name="IconFilterMediumLine" />
                             <IconWrapper component="Icon" name="IconBookmarkMediumLine" />
+                            <IconWrapper component="Icon" name="IconBookmarkMediumFill" />
+                            <IconWrapper component="Icon" name="IconThreeDotMediumFill" />
+                            <IconWrapper component="Icon" name="IconCheckMediumLine" />
+                            <IconWrapper component="Icon" name="IconSelectedMediumLine" />
+                            <IconWrapper component="Icon" name="IconCheckRoundMediumFill" />
+                            <IconWrapper component="Icon" name="IconQuestionMarkMediumLine" />
+                            <IconWrapper component="Icon" name="IconQuestionMarkMediumFill" />
+                            <IconWrapper component="Icon" name="IconExclamationMediumLine" />
+                            <IconWrapper component="Icon" name="IconInformationMediumFill" />
+                            <IconWrapper component="Icon" name="IconCloseRoundMediumFill" />
+                            <IconWrapper component="Icon" name="IconPlusRoundMediumLine" />
+                            <IconWrapper component="Icon" name="IconArrowRoundMediumLine" />
+                            <IconWrapper component="Icon" name="IconImportMediumLine" />
+                            <IconWrapper component="Icon" name="IconLinkMediumLine" />
+                            <IconWrapper component="Icon" name="IconDownloadMediumLine" />
+                            <IconWrapper component="Icon" name="IconTrashMediumLine" />
+                            <IconWrapper component="Icon" name="IconLikeMediumLine" />
+                            <IconWrapper component="Icon" name="IconLikeMediumFill" />
+                            <IconWrapper component="Icon" name="IconBrowseMediumLine" />
+                            <IconWrapper component="Icon" name="IconBrowseMediumFill" />
+                            <IconWrapper component="Icon" name="IconExportMediumLine" />
+                            <IconWrapper component="Icon" name="IconVideoMediumLine" />
+                            <IconWrapper component="Icon" name="IconVideoMediumFill" />
+                            <IconWrapper component="Icon" name="IconClockMediumLine" />
+                            <IconWrapper component="Icon" name="IconClockMediumFill" />
+                            <IconWrapper component="Icon" name="IconPriceMediumLine" />
+                            <IconWrapper component="Icon" name="IconDiscountMediumLine" />
+                            <IconWrapper component="Icon" name="IconLocationMediumLine" />
+                            <IconWrapper component="Icon" name="IconLocationMediumFill" />
+                            <IconWrapper component="Icon" name="IconSupportMediumLine" />
+                            <IconWrapper component="Icon" name="IconCouponMediumLine" />
+                            <IconWrapper component="Icon" name="IconMegaphoneMediumLine" />
+                            <IconWrapper component="Icon" name="IconProfileMediumLine" />
+                            <IconWrapper component="Icon" name="IconStarMediumFill" />
+                            <IconWrapper component="Icon" name="IconCheckMediumFill" />
+                            <IconWrapper component="Icon" name="IconQuestionMediumLine" />
+                            <IconWrapper component="Icon" name="IconFileMediumLineLight" />
+                            <IconWrapper component="Icon" name="IconTrashMediumLineLight" />
+                            <IconWrapper component="Icon" name="IconDownloadMediumLineLight" />
+                            <IconWrapper component="Icon" name="IconHourglassMediumLine" />
+                            <IconWrapper component="Icon" name="IconCloseMediumFill" />
+                            <IconWrapper component="Icon" name="IconInfoMediumFill" />
+                            <IconWrapper component="Icon" name="IconInfoMediumLine" />
+                            <IconWrapper component="Icon" name="IconMentoringMediumLine" />
+                            <IconWrapper component="Icon" name="IconResumeMediumLine" />
+                            <IconWrapper component="Icon" name="IconJobWikiMediumLine" />
+                            <IconWrapper component="Icon" name="IconAnalyticsMediumLine" />
+                            <IconWrapper component="Icon" name="IconEssayMediumLine" />
+                            <IconWrapper component="Icon" name="IconVodMediumLine" />
+                            <IconWrapper component="Icon" name="IconEduMediumLine" />
                         </div>
                     </div>
                     <!--large-->
