feat: 2xlarge 아이콘 스토리 순서 변경

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -265,9 +265,12 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">2XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name=IconProfile2XLargeFill />
-                            <IconWrapper component="Icon" name=IconWriting2XLargeLine />
-                            <IconWrapper component="Icon" name=IconCalendarError2XLargeFill />
+                            <IconWrapper component="Icon" name="IconProfile2XLargeFill" />
+                            <IconWrapper component="Icon" name="IconWriting2XLargeLine" />
+                            <IconWrapper component="Icon" name="IconPhoto2XLargeLine" />
+                        </div>
+                        <div style="background-color:black; width:30px; height:30px;">
+                            <IconWrapper component="Icon" name="IconCalendarError2XLargeFill" />
                         </div>
                     </div>
                     <!--4x-large-->
