feat: 4xlarge 아이콘 반영

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -277,7 +277,7 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name=IconStar4XLargeFill color="gray400" />
+                            <IconWrapper component="Icon" name=IconStar4XLargeFill />
                         </div>
                     </div>
                 </div>
