--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -2,6 +2,7 @@ import { ArgsTable, Meta, Story, Props, Canvas } from '@storybook/addon-docs/blo
 import Icon, { IconNames } from '@/components/elements/core/icon/Icon';
 import { colorKeys } from '@/utils/constants/color';
 import IconWrapper from './IconWrapper';
+import EtcIcon from "@/components/elements/core/icon/EtcIcon";
 import Typography from '@/components/elements/core/typography/Typography';
 
 <Meta
@@ -277,12 +278,20 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">4XLarge</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name=IconStar4XLargeFill />
+                            <IconWrapper component="Icon" name="IconStar4XLargeFill" />
                         </div>
+                    </div>
+                    <!--etc-->
+                    <div>
+                      <Typography type="body1" style="margin-bottom: 10px">etc</Typography>
+                      <div style="display: flex; flex-wrap: wrap;">
+                        <EtcIcon name="IconDropdownMediumLineEtc" />
+                        <EtcIcon name="IconDropdownSmallFillEtc" />
+                      </div>
                     </div>
                 </div>
             `,
-             components: { IconWrapper, Typography },
+             components: { IconWrapper, EtcIcon, Typography },
         }}
     </Story>
 </Canvas>
