feat: large icon story 순서 수정

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -188,42 +188,72 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                         <Typography type="body1" style="margin-bottom: 10px">Large</Typography>
                         <div style="display: flex; flex-wrap: wrap;">
-                            <IconWrapper component="Icon" name=IconLongArrowLargeLine />
-                            <IconWrapper component="Icon" name=IconProfileLargeFill />
-                            <IconWrapper component="Icon" name=IconSelectedLargeLine />
-                            <IconWrapper component="Icon" name=IconReplyLargeLine color="black" />
-                            <IconWrapper component="Icon" name=IconSendLargeFill />
-                            <IconWrapper component="Icon" name=IconPlusLargeLine color="black" />
-                            <IconWrapper component="Icon" name=IconProfileLargeLine />
-                            <IconWrapper component="Icon" name=IconAlarmLargeLine />
-                            <IconWrapper component="Icon" name=IconSearchLargeLine />
-                            <IconWrapper component="Icon" name=IconBackwardLargeLine />
-                            <IconWrapper component="Icon" name=IconArrowLargeLine />
-                            <IconWrapper component="Icon" name=IconTextArrowLargeLine />
-                            <IconWrapper component="Icon" name=IconCloseLargeLine />
-                            <IconWrapper component="Icon" name=IconExclamationLargeLine />
-                            <IconWrapper component="Icon" name=IconFilterLargeLine />
-                            <IconWrapper component="Icon" name=IconCheckLargeFill />
-                            <IconWrapper component="Icon" name=IconSecurityLargeFill />
-                            <IconWrapper component="Icon" name=IconDownloadLargeLine color="black" />
-                            <IconWrapper component="Icon" name=IconCheckLargeLine />
-                            <IconWrapper component="Icon" name=IconKeylineLargeLine />
-                            <IconWrapper component="Icon" name=IconMentoringLargeLine />
-                            <IconWrapper component="Icon" name=IconVodLargeLine />
-                            <IconWrapper component="Icon" name=IconAnswerLargeLine />
-                            <IconWrapper component="Icon" name=IconEduLargeLine />
-                            <IconWrapper component="Icon" name=IconAnalyticsLargeLine />
-                            <IconWrapper component="Icon" name=IconInterviewLargeLine />
-                            <IconWrapper component="Icon" name=IconEssayLargeLine />
-                            <IconWrapper component="Icon" name=IconResumeLargeLine />
-                            <IconWrapper component="Icon" name=IconQuestionLargeLine />
-                            <IconWrapper component="Icon" name=IconVideoLargeFill />
-                            <IconWrapper component="Icon" name=IconStarLargeFill />
-                            <IconWrapper component="Icon" name=IconHamburgerLargeLine />
-                            <IconWrapper component="Icon" name=IconWarningLargeFill />
-                            <IconWrapper component="Icon" name=IconBookmarkLargeLine />
-                            <IconWrapper component="Icon" name=IconBookmarkLargeFill />
-                            <IconWrapper component="Icon" name=IconLockLargeFill />
+                          <IconWrapper component="Icon" name="IconProfileLargeLine" />
+                          <IconWrapper component="Icon" name="IconProfileLargeFill" />
+                          <IconWrapper component="Icon" name="IconAnswerLargeLine" />
+                          <IconWrapper component="Icon" name="IconVodLargeLine" />
+                          <IconWrapper component="Icon" name="IconQuestionLargeLine" />
+                          <IconWrapper component="Icon" name="IconEssayLargeLine" />
+                          <IconWrapper component="Icon" name="IconInterviewLargeLine" />
+                          <IconWrapper component="Icon" name="IconResumeLargeLine" />
+                          <IconWrapper component="Icon" name="IconAnalyticsLargeLine" />
+                          <IconWrapper component="Icon" name="IconMentoringLargeLine" />
+                          <IconWrapper component="Icon" name="IconEduLargeLine" />
+                      </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconArrowLargeLine" />
+                          <IconWrapper component="Icon" name="IconTextArrowLargeLine" />
+                          <IconWrapper component="Icon" name="IconBackwardLargeLine" />
+                          <IconWrapper component="Icon" name="IconReplyLargeLine" />
+                          <IconWrapper component="Icon" name="IconPlusLargeLine" />
+                          <IconWrapper component="Icon" name="IconCloseLargeLine" />
+                          <IconWrapper component="Icon" name="IconHamburgerLargeLine" />
+                          <IconWrapper component="Icon" name="IconFilterLargeLine" />
+                          <IconWrapper component="Icon" name="IconSearchLargeLine" />
+                          <IconWrapper component="Icon" name="IconAlarmLargeLine" />
+                          <IconWrapper component="Icon" name="IconBookmarkLargeLine" />
+                          <IconWrapper component="Icon" name="IconBookmarkLargeFill" />
+                      </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconCheckLargeLine" />
+                          <IconWrapper component="Icon" name="IconCheckRoundLargeLine" />
+                          <IconWrapper component="Icon" name="IconCheckRoundLargeFill" />
+                          <IconWrapper component="Icon" name="IconQuestionMarkLargeLine" />
+                          <IconWrapper component="Icon" name="IconQuestionMarkLargeFill" />
+                          <IconWrapper component="Icon" name="IconExclamationLargeLine" />
+                          <IconWrapper component="Icon" name="IconExclamationLargeFill" />
+                          <IconWrapper component="Icon" name="IconInformationLargeLine" />
+                          <IconWrapper component="Icon" name="IconPlusRoundLargeLine" />
+                          <IconWrapper component="Icon" name="IconStarRoundLargeFill" />
+                          <IconWrapper component="Icon" name="IconSettingLargeLine" />
+                      </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconLockLargeLine" />
+                          <IconWrapper component="Icon" name="IconLockLargeFill" />
+                          <IconWrapper component="Icon" name="IconSecurityLargeLine" />
+                          <IconWrapper component="Icon" name="IconSecurityLargeFill" />
+                          <IconWrapper component="Icon" name="IconImportLargeLine" />
+                          <IconWrapper component="Icon" name="IconLinkLargeLine" />
+                          <IconWrapper component="Icon" name="IconDownloadLargeLine" />
+                          <IconWrapper component="Icon" name="IconTrashLargeLine" />
+                          <IconWrapper component="Icon" name="IconPhotoLargeLine" />
+                          <IconWrapper component="Icon" name="IconWritingLargeLine" />
+                          <IconWrapper component="Icon" name="IconSendLargeFill" />
+                      </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconCouponLargeLine" />
+                          <IconWrapper component="Icon" name="IconMegaphoneLargeLine" />
+                          <IconWrapper component="Icon" name="IconVideoLargeLine" />
+                          <IconWrapper component="Icon" name="IconVideoLargeFill" />
+                          <IconWrapper component="Icon" name="IconStarLargeLine" />
+                          <IconWrapper component="Icon" name="IconStarLargeFill" />
+                      </div>
+                      <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconLongArrowLargeLine" />
+                          <IconWrapper component="Icon" name="IconSelectedLargeLine" />
+                          <IconWrapper component="Icon" name="IconKeylineLargeLine" />
+                          <IconWrapper component="Icon" name="IconCheckLargeFill" />
+                          <IconWrapper component="Icon" name="IconWarningLargeFill" />
                         </div>
                     </div>
                     <!--x-large-->
