feat: IconFileMediumLine 추가

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -183,6 +183,9 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconVodMediumLine" />
                           <IconWrapper component="Icon" name="IconEduMediumLine" />
                         </div>
+                        <div style="display: flex; flex-wrap: wrap;">
+                          <IconWrapper component="Icon" name="IconFileMediumLine" />
+                        </div>
                     </div>
                     <!--large-->
                     <div>
