feat: 아이콘 순서 변경

--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -73,8 +73,8 @@ export const Default = (args, { argTypes }) => ({
                             <IconWrapper component="Icon" name="IconProfileSmallFill"/>
                             <IconWrapper component="Icon" name="IconArrowSmallLine"/>
                             <IconWrapper component="Icon" name="IconTextArrowSmallLine"/>
-                            <IconWrapper component="Icon" name="IconCloseSmallLine"/>
                             <IconWrapper component="Icon" name="IconPlusSmallLine"/>
+                            <IconWrapper component="Icon" name="IconCloseSmallLine"/>
                             <IconWrapper component="Icon" name="IconSearchSmallLine"/>
                         </div>
                         <div style="display: flex; flex-wrap: wrap;">
@@ -134,7 +134,9 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconQuestionMarkMediumFill" />
                           <IconWrapper component="Icon" name="IconExclamationMediumLine" />
                           <IconWrapper component="Icon" name="IconExclamationMediumFill" />
+                          <IconWrapper component="Icon" name="IconInformationMediumLine" />
                           <IconWrapper component="Icon" name="IconInformationMediumFill" />
+                          <IconWrapper component="Icon" name="IconCloseRoundMediumLine" />
                           <IconWrapper component="Icon" name="IconCloseRoundMediumFill" />
                           <IconWrapper component="Icon" name="IconPlusRoundMediumLine" />
                           <IconWrapper component="Icon" name="IconArrowRoundMediumLine" />
@@ -164,6 +166,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconSupportMediumLine" />
                           <IconWrapper component="Icon" name="IconCouponMediumLine" />
                           <IconWrapper component="Icon" name="IconMegaphoneMediumLine" />
+                          <IconWrapper component="Icon" name="IconStarMediumLine" />
                           <IconWrapper component="Icon" name="IconStarMediumFill" />
                           <IconWrapper component="Icon" name="IconThreeDotMediumFill" />
                         </div>
@@ -226,6 +229,7 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconExclamationLargeLine" />
                           <IconWrapper component="Icon" name="IconExclamationLargeFill" />
                           <IconWrapper component="Icon" name="IconInformationLargeLine" />
+                          <IconWrapper component="Icon" name="IconInformationLargeFill" />
                           <IconWrapper component="Icon" name="IconPlusRoundLargeLine" />
                           <IconWrapper component="Icon" name="IconStarRoundLargeFill" />
                           <IconWrapper component="Icon" name="IconSettingLargeLine" />
@@ -318,8 +322,8 @@ export const Default = (args, { argTypes }) => ({
                     <div>
                       <Typography type="body1" style="margin-bottom: 10px">etc</Typography>
                       <div style="display: flex; flex-wrap: wrap;">
-                        <EtcIcon name="IconDropdownMediumLineEtc" />
                         <EtcIcon name="IconDropdownSmallFillEtc" />
+                        <EtcIcon name="IconDropdownMediumLineEtc" />
                       </div>
                     </div>
                 </div>
