feat: IconTextArrowSmallFill 적용
IconTextArrowSmallFill -> IconTextArrowSmallLine
icon-textArrow-small-fill 제거

--- a/stories/components/general/button/NarrowButton.stories.mdx
+++ b/stories/components/general/button/NarrowButton.stories.mdx
@@ -61,13 +61,13 @@ export const Default = (args, { argTypes }) => ({
                         <NarrowButton color="gray400">
                             Small Gray500
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallFill" color="gray400" />
+                                <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
                         </NarrowButton>
                         <NarrowButton color="gray600">
                             Small Gray600
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallFill" color="gray500" />
+                                <Icon name="IconTextArrowSmallLine" color="gray500" />
                             </template>
                         </NarrowButton>
                     </div>
@@ -75,13 +75,13 @@ export const Default = (args, { argTypes }) => ({
                         <NarrowButton color="gray400" size="medium">
                             Medium Gray500
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallFill" color="gray400" />
+                                <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
                         </NarrowButton>
                         <NarrowButton color="gray600" size="medium">
                             Medium Gray600
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallFill" color="gray500" />
+                                <Icon name="IconTextArrowSmallLine" color="gray500" />
                             </template>
                         </NarrowButton>
                     </div>
@@ -89,13 +89,13 @@ export const Default = (args, { argTypes }) => ({
                         <NarrowButton color="gray400" size="large">
                             Large Gray500
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallFill" color="gray400" />
+                                <Icon name="IconTextArrowSmallLine" color="gray400" />
                             </template>
                         </NarrowButton>
                         <NarrowButton color="gray600" size="large">
                             Large Gray600
                             <template v-slot:right-icon>
-                                <Icon name="IconTextArrowSmallFill" color="gray500" />
+                                <Icon name="IconTextArrowSmallLine" color="gray500" />
                             </template>
                         </NarrowButton>
                     </div>
@@ -154,7 +154,7 @@ export const Default = (args, { argTypes }) => ({
                         </template>
                         WithIcon
                         <template v-slot:right-icon>
-                            <Icon name="IconTextArrowSmallFill" color="gray400" />
+                            <Icon name="IconTextArrowSmallLine" color="gray400" />
                         </template>
                     </NarrowButton>
                     <NarrowButton color="gray600">
@@ -163,7 +163,7 @@ export const Default = (args, { argTypes }) => ({
                         </template>
                         WithIcon
                         <template v-slot:right-icon>
-                            <Icon name="IconTextArrowSmallFill" color="gray500" />
+                            <Icon name="IconTextArrowSmallLine" color="gray500" />
                         </template>
                     </NarrowButton>
                 </div>
