--- a/stories/components/dataEntry/FileInput.stories.mdx
+++ b/stories/components/dataEntry/FileInput.stories.mdx
@@ -28,6 +28,12 @@ import Divider from '@/components/elements/utility/Divider';
         type: "boolean",
       },
     },
+    buttonText: {
+      description: "버튼 텍스트",
+      control: {
+          type: "text"
+      }
+    }
   }}
 />
 
@@ -55,8 +61,12 @@ export const Default = (args, { argTypes }) => ({
   },
   template: `<div style="width: 100%; display: flex; justify-content: center; align-items: center; flex-direction: column;">
                 <div style="width: 100%">
-                 <FileInput :accept="accept" :multiple="multiple" :full="full"
-                 @uploadFiles="handleUploadFiles"
+                 <FileInput
+                    :accept="accept"
+                    :multiple="multiple"
+                    :full="full"
+                    :button-text="buttonText"
+                    @uploadFiles="handleUploadFiles"
                  />
                  <Divider type="dash" style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
                  <FileList :files="files" @clickFileDownloadIcon="handleClickFileDownloadIcon" @clickFileItemContent="handleClickFileItemContent"/>
