feat: FileInput 컴포넌트에 disabled props 추가

--- a/stories/components/dataEntry/FileInput.stories.mdx
+++ b/stories/components/dataEntry/FileInput.stories.mdx
@@ -33,7 +33,13 @@ import Divider from '@/components/elements/utility/Divider';
       control: {
           type: "text"
       }
-    }
+    },
+      disabled: {
+        type: Boolean,
+        control: {
+          type: "boolean",
+        }
+      }
   }}
 />
 
@@ -66,6 +72,7 @@ export const Default = (args, { argTypes }) => ({
                     :multiple="multiple"
                     :full="full"
                     :button-text="buttonText"
+                    :disabled="disabled"
                     @uploadFiles="handleUploadFiles"
                  />
                  <Divider type="dash" style="margin-top: 8.5px; margin-bottom: 12.5px;"/>
