feat: IconAnalyticsMediumLine 적용
IconAnalyticsMediumLine 제거

--- a/stories/components/dataDisplay/list/list/List.stories.mdx
+++ b/stories/components/dataDisplay/list/list/List.stories.mdx
@@ -80,12 +80,7 @@ export const Default = (args, { argTypes }) => ({
         {{
             data() {
                 return {
-                    menus: [
-                        {
-                            name: 'AI 자기소개서 분석기',
-                            icon: 'IconAnalyticsMediumLine',
-                        },
-                    ],
+                    menus: [],
                     activeIndex: 0,
                 };
             },
