--- a/stories/elements/core/icon/Icon.stories.mdx
+++ b/stories/elements/core/icon/Icon.stories.mdx
@@ -263,7 +263,8 @@ export const Default = (args, { argTypes }) => ({
                           <IconWrapper component="Icon" name="IconQuestionXLargeLine" />
                           <IconWrapper component="Icon" name="IconUnCheckedXLargeFill" />
                           <IconWrapper component="Icon" name="IconSettingXLargeLine" />
-                          <IconWrapper component="Icon" name="IconBookmarkXLargeFill" />
+                        <IconWrapper component="Icon" name="IconBookmarkXLargeFill" />
+                        <IconWrapper component="Icon" name="IconBookmarkXLargeLine" />
                       </div>
                     </div>
                     <!--2x-large-->
